# cadvm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  server.json
.github/actions/cadvm-verify/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cpp/: build.sh
cpp/cadvm-geom/: CMakeLists.txt
cpp/cadvm-geom/src/: main.cpp
crates/cadvm-cli/: Cargo.toml  README.md
crates/cadvm-cli/src/: main.rs  mcp.rs  ui.rs  viewer.rs
crates/cadvm-cli/tests/: cli_flow.rs
crates/cadvm-core/: Cargo.toml
crates/cadvm-core/src/: checkout.rs  config.rs  diff.rs  error.rs  format.rs  gc.rs  geom.rs  ignore.rs  index.rs  lib.rs  mesh.rs  meshdiff.rs  model.rs  repo.rs  revision.rs  snapshot.rs  status.rs  step.rs  verify.rs  worktree.rs
crates/cadvm-core/tests/: integration.rs
crates/cadvm-store/: Cargo.toml
crates/cadvm-store/src/: lib.rs  object_id.rs
crates/cadvm-store/tests/: dedup.rs
docs/: book.toml
docs/src/: SUMMARY.md  ai.md  commands.md  demo-viewer.html  demo.md  developing.md  example-agent.md  geometry.md  getting-started.md  installation.md  introduction.md  license.md  mcp-publishing.md  platforms.md  roadmap.md  storage.md  tui.md  viewer.md  workflow.md
docs/src/https:/adembch.github.io/cadvm/api/cadvm_core/: index.html
examples/: README.md  agent-loop.sh  ci-gate.yml
scripts/: install-release.sh  install.sh  uninstall.sh
tests/fixtures/: README.txt  bloc1.step  bloc2.step  block_v1.step  block_v1.stl  block_v2.step  block_v2.stl  cube_hole5.step  cube_hole8.step  generate-blocks.cpp  two_holes.stp
