[workspace]
resolver = "2"
members = [
    "crates/cadvm-cli",
    "crates/cadvm-core",
    "crates/cadvm-store",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Prosperity-3.0.0"
authors = ["cadvm contributors"]
repository = "https://github.com/AdeMBCH/cadvm"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
blake3 = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
fs_extra = "1"

# Internal crates
cadvm-core = { path = "crates/cadvm-core" }
cadvm-store = { path = "crates/cadvm-store" }
