[workspace]
resolver = "2"
members = [
    "crates/cadvm-cli",
    "crates/cadvm-core",
    "crates/cadvm-store",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "LicenseRef-Prosperity-3.0.0"
authors = ["cadvm contributors"]
repository = "https://github.com/AdeMBCH/cadvm"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
blake3 = "1"
flate2 = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
fs_extra = "1"

# Internal crates (path for local builds, version so they resolve from crates.io
# once published).
cadvm-core = { path = "crates/cadvm-core", version = "0.1.1" }
cadvm-store = { path = "crates/cadvm-store", version = "0.1.1" }
