[package]
name = "cadvm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for cadvm, the CAD Version Manager."

[[bin]]
name = "cadvm"
path = "src/main.rs"

[dependencies]
cadvm-core.workspace = true
cadvm-store.workspace = true
clap.workspace = true
clap_complete = "4"
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
ratatui = "0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
