[package]
name = "cadvm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "CAD Version Manager: version, diff, verify and an MCP server for STEP/STP/STL/OBJ — built for AI-generated CAD."

[[bin]]
name = "cadvm"
path = "src/main.rs"

[dependencies]
cadvm-core.workspace = true
cadvm-store.workspace = true
clap.workspace = true
clap_complete = "4"
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
ratatui = "0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
