[package]
name = "cadvm-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Content-addressed storage backend for cadvm (blobs, chunks, BLAKE3 hashing)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
